infra/k8s/metrics/metrics-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: metrics-service
  namespace: default
spec:
  selector:
    app: metrics
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  type: ClusterIP
